# blog-flask

./: .gitignore  .pdm-python  LICENSE  Pipfile  README.md  blog_posts.json  connect_db.py  db.py  db.sqlite3  db.sqlite3-journal  main.py  model.conf  policy.csv  pyproject.toml  read_json.py  requirements.txt  script.sh
instance/: data.db
models/: __init_.py
routes/: __init__.py  auth_routes.py  category_routes.py
routes/auth/: auth_routes.py
routes/blog/: blog_routes.py
routes/posts/: posts.py
routes/users/: users.py
static/css/: admin.css  cores.css  criar_post.css  login.css  style.css
templates/: 404.html  Index.html  base.html  categorias.html  pagina_admin.html  pagina_login.html  show_post.html
templates/admin/: admin.html  criar_post.html  editar_post.html  listar_posts.html  login.html  pagina_admin.html  pagina_login.html  users_list.html
templates/admin/post/: create_post.html  edit_post.html  post_list.html
templates/admin/user/: create_user.html  edit_user.html  user_list.html
templates/blog/: Index.html  home.html  show_post.html
templates/components/: header.html  nav_bar.html  scroll_buttons.html
utils/: utils.py
