[tool.poetry]
name = "blog flask"
version = "0.1.0"
description = ""
authors = ["jesieldotdev <jesiel364@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.0.3"
Flask-SQLAlchemy = "^3.1.1"
Flask-Migrate = "^4.0.7"
casbin = "^1.36.3"
flask-authz = "^2.6.0"

[tool.poetry.dev-dependencies]
python = "^3.10"
flask = "^2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry-scripts]
run = "main:app"